# cli_chaoscrypto

./: .gitignore  Makefile  QUICKSTART.md  README.md  analysis.csv  analysis.json  changelog.md  checklist_ba2.md  dec.txt  enc.json  instructions.md  pyproject.toml  report.md  requirements.txt  results.csv  results.json  traj.csv
docs/: WP2_ChaosCrypto_CLI_Plan.md  WP2_ChaosCrypto_CLI_Plan_v2.md
docs/figures/: ba2_architecture.mmd  ba2_architecture_tikz.tex
examples/: analyze.yaml  ba1_analyze.yaml  ba1_benchmark.yaml  ba2_analyze_nist.yaml  ba2_avalanche.yaml  ba2_benchmark.yaml  ba2_periodicity.yaml  ba2_platform_check.yaml  bench.yaml
scripts/: generate_performance_figures.py  generate_platform_divergence_figure.py  generate_security_figures.py  run_ba1.ps1  run_ba1.sh  run_ba2.ps1  run_ba2.sh
src/chaoscrypto/analysis/: attractor_reconstruction.py  avalanche.py  ba2_eval.py  nist_batch.py  nist_validator.py  periodicity.py  platform_divergence.py  runner.py  usability.py
src/chaoscrypto_wp2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_analyze.py  test_analyze_memory.py  test_attractor_reconstruction.py  test_avalanche.py  test_ba2_eval.py  test_benchmark.py  test_benchmark_memory.py  test_determinism.py  test_encrypt_decrypt.py  test_init.py  test_keystream.py  test_memory_models.py  test_nist_batch.py  test_nist_validator.py  test_periodicity.py  test_platform_divergence.py  test_profile_commands.py  test_report.py  test_seed_strategies.py  test_usability_eval.py  test_usability_log.py
(+22 files in other folders)
