[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chaoscrypto-wp2"
version = "0.1.0"
description = "Deterministic ChaosCrypto CLI (WP2 MVP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "typer[all]",
    "rich",
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.optional-dependencies]
dev = [
    "pytest",
]
